# Camera_PC

./: .gitignore  CMakeLists.txt  README.md  XDMA_MoreB.cpp  camera_PC.pro  cameraprobe.cpp  cameraprobe.h  main.cpp  ui_widget.h  video_packet_batcher.cpp  video_packet_batcher.h  widget.cpp  widget.h  widget.ui  xdmaDLL_public.h
include/: xdmaDLL_public_linux.h
src/: XDMA_MoreB_linux.cc  cameraprobe.cpp  main.cpp  widget.cpp
